...

      <Button
        android:id="@+id/updateButton"
        android:layout_width="100dp"
        android:layout_height="38dp"
...
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_button_rectangle"
        android:text="@string/update"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subReadResponceJournalButton"/>

      <TextView
        android:id="@+id/treatmentEffectiveView"
        android:layout_width="10dp"
        android:layout_height="0dp"
...
        android:textColor="@color/text_regular"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/treatmentEffectivenessAssessment"
        app:layout_constraintStart_toStartOf="parent"/>

      <TextView
        android:id="@+id/lessonView"
        android:layout_width="10dp"
        android:layout_height="0dp"
...
        android:textColor="@color/text_regular"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/lessonPlanner"
        app:layout_constraintStart_toStartOf="@+id/imageView"/>

      <TextView
        android:id="@+id/counselingView"
        android:layout_width="10dp"
        android:layout_height="0dp"
...
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBaseline_toBaselineOf="@id/counseling"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="23dp"/>

      <TextView
        android:id="@+id/outcomeMeasureView"
        android:layout_width="10dp"
        android:layout_height="0dp"
...
        android:textColor="@color/text_regular"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/outcomeMeasure"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="188dp"/>

      <TextView
        android:id="@+id/timeTrackingView"
        android:layout_width="10dp"
        android:layout_height="0dp"
...
        android:textColor="@color/text_regular"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/cleanTimeTracking"
        app:layout_constraintStart_toStartOf="parent"/>

      <TextView
        android:id="@+id/readingResponseView"
        android:layout_width="10dp"
        android:layout_height="0dp"
...
        android:textColor="@color/text_regular"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/readingResponceJournal"
        app:layout_constraintStart_toStartOf="parent"/>

      <Button
        android:id="@+id/addCounselButton"
        android:textStyle="bold"
        android:layout_width="46dp"
...

      <TextView
        android:id="@+id/supportMeetingView"
        android:layout_width="10dp"
        android:layout_height="0dp"
...
        android:textColor="@color/text_regular"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/supportGroupMeeting"
        app:layout_constraintStart_toStartOf="parent"/>

      <TextView
        android:id="@+id/medManagementView"
        android:layout_width="10dp"
        android:layout_height="0dp"
...
        android:textColor="#555555"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/medManagement"
        app:layout_constraintStart_toStartOf="parent"/>

      <Button
        android:id="@+id/subLessonPlannerButton"
        android:textStyle="bold"
        android:layout_width="46dp"
...
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/addLessonPlannerButton"
        app:layout_constraintTop_toBottomOf="@+id/subOutcomeMeasureButton"/>

      <Button
        android:id="@+id/subMedMangaementButton"
        android:textStyle="bold"
        android:layout_width="46dp"
...
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/addMedManagementButton"
        app:layout_constraintTop_toBottomOf="@+id/subCounselButton"/>

      <Button
...

      <Button
        android:id="@+id/addSupportGroupMeetingButton"
        android:layout_width="46dp"
        android:layout_height="39dp"
...
        android:textColor="@color/text_regular"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/subCleanTimeTrackingButton"
        app:layout_constraintEnd_toStartOf="@+id/subCleanTimeTrackingButton"
        app:layout_constraintHorizontal_bias="0.286"
...
        android:textColor="@color/text_regular"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/subSupportGroupButton"
        app:layout_constraintEnd_toStartOf="@+id/subSupportGroupButton"
        app:layout_constraintHorizontal_bias="0.286"
...
        android:textColor="@color/text_regular"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/subTreatmentEffectivenessAssessmentButton"
        app:layout_constraintEnd_toStartOf="@+id/subTreatmentEffectivenessAssessmentButton"
        app:layout_constraintHorizontal_bias="0.286"
...
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/addOutcomeMeasureButton"
        app:layout_constraintTop_toBottomOf="@+id/subSupportGroupButton"/>

...
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/addTreatmentEffectivnessAssessmentButton"
        app:layout_constraintTop_toBottomOf="@+id/subLessonPlannerButton"/>

...
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/addCleanTimeTrackingButton"
        app:layout_constraintTop_toBottomOf="@+id/subTreatmentEffectivenessAssessmentButton"/>

...
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/addReadResponceJournalButton"
        app:layout_constraintTop_toBottomOf="@+id/subCleanTimeTrackingButton"/>

...
        app:layout_constraintTop_toBottomOf="@+id/addOutcomeMeasureButton"/>
      <Button
        android:id="@+id/finishButton"
        android:layout_width="0dp"
        android:layout_height="38dp"
...
