...
  doses a day would you like to take?</string>
  <string name="dosage_choice_confirm"> Confirm</string>
  <string name="dosage_choice_res_logo"> Logo</string>
  <string name="add"> + </string>
  <string name="sub"> - </string>
  <string name="update"> update</string>
  <string name="counseling">Counseling</string>
  <string name="medManagement">Medication Management</string>
  <string name="cleanTimeTracking">Clean Time Tracking</string>
  <string name="supportMeeting">Support Meeting</string>
  <string name="outcomeMeasure">Outcome Measure</string>
  <string name="lessonPlanner">Lesson Planner</string>
  <string name="treatmentEffectivenessAssessment">Treatment Plan Effectiveness Assessment</string>
  <string name="readResponseJournal">Read and Response Journal</string>
  <string name="lifestyle"> Lifestyle</string>
  <string name="health">Health</string>
  <string name="community">Community</string>
  <string name="substance">Substance Use</string>
  <string name="tea_question_one"> How much better are you with drug and alcohol use?  Consider the frequency and amount of use, money spent on drugs, amount of drug cravings, time spent being “loaded”, being sick, in trouble and in other drug-use activities etc?</string>
  <string name="tea_question_two">Has your health improved?  In what way and how much?  Think about your physical and mental health.  Are you eating and sleeping properly, exercising, taking care of health problems, feeling better about yourself?</string>
...
